# libmensago

./: .gitignore  Build.jmk  CMakeLists.txt  Cargo.toml  README.md  cryptostring.cpp  libmensago.pro
base85_test/: Build.jmk  base85_test.pro  tst_base85.cpp
cryptostring_test/: cryptostring_test.pro  tst_cryptostring.cpp
include/: base85.h  libmensago.h
integration_tests/: Cargo.toml
integration_tests/tests/: client.rs  common.rs  contactmodels.rs  dbconn.rs  dbsupport.rs  demodata.rs  iscmds.rs  lib.rs  models.rs  notes.rs  resolver.rs
integration_tests/tests/demofiles/: pilgrimsprogress.txt  roadnottaken.sftm
integration_tests/tests/testfiles/: dartpass_readme.md
libmensago/: Cargo.toml
libmensago/src/: auth.rs  base.rs  client.rs  config.rs  conn.rs  dbcmds.rs  dbconn.rs  dbfs.rs  dbsupport.rs  dbwatcher.rs  dnshandler.rs  lib.rs  notes.rs  profile.rs  resolver.rs  types.rs  workspace.rs
libmensago/src/commands/: iscmds.rs  mod.rs  servermsg.rs
libmensago/src/contacts/: contact.rs  fields.rs  mod.rs  models.rs  types.rs
libmensago/src/dbsupport/: mod.rs  types.rs
libmensago/src/messaging/: mod.rs  models.rs  types.rs
libmensago/src/testfiles/: sign_test_card.py  test_org_card.kc
mensago/: Build.jmk  cryptostring.cpp  cryptostring.h  libmensago.cpp  libmensago.pro  mensago.pro  mensago_global.h
src/: address.rs  auth.rs  base.rs  base85.cpp  config.rs  conn.rs  dbfs.rs  domain.rs  keycard.rs  keycard_private.rs  keycardbase.rs  lib.rs  messaging.rs  orgcard.rs  profile.rs  randomid.rs  servermsg.rs  types.rs  usercard.rs  userid.rs  workspace.rs
src/commands/: clientcmds.rs  iscmds.rs  mod.rs  servermsg.rs
tests/: base85_test.cpp  cryptostring_test.cpp
