[package]
name = "libmensago"
version = "0.1.0"
edition = "2021"
authors = [ "Jon Yoder <jon@yoder.cloud>"]
description = "A library for implementing clients for the Mensago platform"
readme = "README.md"
homepage = "https://github.com/darkwyrm/libmensago"
repository = "https://github.com/darkwyrm/libmensago"
license = "MPL-2.0-no-copyleft-exception"
keywords = ["mensago"]
categories = ["network-programming"]
exclude = [".gitignore"]

[dependencies]
