[package]
name = "libmensago"
version = "0.1.0"
edition = "2021"
authors = [ "Jon Yoder <jon@yoder.cloud>"]
description = "A library for implementing clients for the Mensago platform"
readme = "README.md"
homepage = "https://github.com/darkwyrm/libmensago"
repository = "https://github.com/darkwyrm/libmensago"
license = "MPL-2.0-no-copyleft-exception"
keywords = ["mensago"]
categories = ["network-programming"]
exclude = [".gitignore"]

[dependencies]
anyhow = "1.0.56"
eznacl = "1.0.0"
hex = "0.4.3"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.5.5"
thiserror = "1.0.30"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
