[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
authors = [ "Jon Yoder <jon@yoder.cloud>"]
license = "MPL-2.0-no-copyleft-exception"
autotests = false

[dependencies]
glob = "0.3.0"
eznacl = "3.2.6"
lazy_static = "1.4.0"
libkeycard = "0.1.11"
libmensago = { path = "../libmensago" }
postgres = "0.19.3"
toml_edit = "0.14.4"

[[test]]
name = "integration"
path= "tests/lib.rs"
