[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
authors = [ "Jon Yoder <jon@yoder.cloud>"]
license = "MPL-2.0-no-copyleft-exception"
autotests = false

[dependencies]
crossbeam-channel = "0.5"
glob = "0.3.0"
eznacl = "3.2.6"
lazy_static = "1.4.0"
libkeycard = { git = "https://gitlab.com/darkwyrm/libkeycard", features = ["use_serde"] }
libmensago = { path = "../libmensago" }
mime = "0.3.16"
postgres = "0.19.3"
rusqlite = { version = "0.27.0", features = ["bundled"] }
toml_edit = "0.14.4"
trust-dns-resolver = "0.21.2"

[[test]]
name = "integration"
path= "tests/lib.rs"
