[package]
name = "libmensago"
version = "0.0.1"
edition = "2021"
authors = [ "Jon Yoder <jon@yoder.cloud>"]
description = "A library for implementing clients for the Mensago platform"
readme = "README.md"
homepage = "https://github.com/darkwyrm/libmensago"
repository = "https://github.com/darkwyrm/libmensago"
license = "MPL-2.0-no-copyleft-exception"
keywords = ["mensago"]
categories = ["network-programming"]
exclude = [".gitignore"]
autotests = false

[dependencies]
base85 = "1.1.0"
chrono = "0.4.19"
eznacl = "3.2.6"
hex = "0.4.3"
hostname = "0.3.1"
iobuffer = "0.2.0"
lazy_static = "1.4.0"
libkeycard = { git = "https://gitlab.com/darkwyrm/libkeycard", features = ["use_serde"] }
os_info = { version = "3", default-features = false }
rand = "0.8.5"
regex = "1.5.5"
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1"
sys-info = "0.9"
thiserror = "1.0.30"
trust-dns-proto = "0.21.2"
trust-dns-resolver = "0.21.2"
uuid = { version = "0.8.2", features = ["v4"] }
